--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -5,7 +5,6 @@
 .nav {
   background-color: #373737 !important;
   padding: 0px;
-  height: 64px;
 
   .navbar-toggler {
     margin: 10px 0px 10px 10px;
@@ -15,25 +14,17 @@
     display: flex;
     width: 100%;
     padding: 0px;
-    height: 100%;
 
     .nav-item-wrapper {
       text-align: center;
       cursor: pointer;
       flex: 1 1;
-      height: 100%;
 
       .nav-item {
-        height: 100%;
-
         .nav-link {
           padding: 0px;
           color: white;
           background-color: #373737;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
 
           a {
             color: white;
@@ -41,15 +32,15 @@
             overflow: hidden;
             white-space: nowrap;
             display: block;
-            height: 100%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            padding: 20px 0px;
           }
 
           &.active {
             background-color: #8dc63f;
+          }
+
+          &:hover {
+            background-color: gray;
           }
         }
       }
@@ -58,7 +49,7 @@
 }
 
 .dropdown-menu {
-  left: 0px;
+  right: 0px;
   min-width: 120px;
   background-color: #373737 !important;
   padding: 0px;
@@ -70,13 +61,9 @@
     text-decoration: none;
     overflow: hidden;
     white-space: nowrap;
-    height: 64px !important;
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
 
     &:hover {
-      color: black;
+      background-color: gray;
     }
 
     &.active {
@@ -85,12 +72,15 @@
   }
 }
 
+// Navbar for collapsed state
 @include media-breakpoint-down(lg) {
   .navbar {
     display: block !important;
+  }
 
-    .nav-item-wrapper {
-      height: 64px !important;
-    }
+  .dropdown-menu {
+    margin: 5px;
+    position: static;
+    border: 10px solid white;
   }
 }
