--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,34 +1,43 @@
-<div class="card" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()">
-  <!-- Image section  -->
-  <section class="image-wrapper">
-    <img [src]="game?.image" alt="Image is not ready" />
-  </section>
-  <!-- End section  -->
+<nz-spin [nzSpinning]="isLoading">
+  <div class="card" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()">
+    <!-- Image section  -->
+    <section class="image-wrapper">
+      <img [src]="game?.image" alt="Image is not ready" (load)="logIndex()" />
+    </section>
+    <!-- End section  -->
 
-  <!-- Ribbon section -->
-  <!-- <section class="ribbon-wrapper">
-    <img />
-  </section> -->
-  <!-- End section -->
+    <!-- Ribbon section -->
+    <section class="ribbon-wrapper" *ngIf="game?.ribbon">
+      <div class="ribbon-value">
+        <img src="../../../../assets/imgs/ribbon.png" alt="Ribbon tab" />
 
-  <!-- Jackpot section -->
-  <section class="jackpot-wrapper" *ngIf="game?.jackpot">
-    <div class="jackpot-content">
-      <p>£{{ game?.jackpot }}</p>
-    </div>
-  </section>
-  <!-- End section -->
-
-  <!-- Controller section -->
-  <section class="hover-background" [ngClass]="{isFocused}">
-    <section class="controller-wrapper">
-      <div class="controller">
-        <span>
-          {{ game?.name }}
-        </span>
-        <img src="../../../../assets/icon/svg/play_circle.svg" />
+        <span>{{ game?.ribbon }}</span>
       </div>
     </section>
-  </section>
-  <!-- End section -->
-</div>
+    <!-- End section -->
+
+    <!-- Jackpot section -->
+    <section class="jackpot-wrapper" *ngIf="game?.jackpot">
+      <div class="jackpot-content">
+        <p>£{{ game?.jackpot }}</p>
+      </div>
+    </section>
+    <!-- End section -->
+
+    <!-- Controller section -->
+    <section class="hover-background" [ngClass]="{isFocused}">
+      <section class="controller-wrapper">
+        <div class="controller">
+          <span>
+            {{ game?.name }}
+          </span>
+          <img
+            src="../../../../assets/icon/svg/play_circle.svg"
+            alt="Game play icon"
+          />
+        </div>
+      </section>
+    </section>
+    <!-- End section -->
+  </div>
+</nz-spin>
