--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -1,5 +1,7 @@
 .card {
   position: relative;
+  border: none;
+  border-radius: 14px;
 
   .image-wrapper {
     width: 100%;
@@ -8,6 +10,7 @@
     img {
       width: 100%;
       height: 180px;
+      border-radius: 14px;
     }
   }
 
@@ -18,6 +21,7 @@
     left: 0px;
     background-color: rgb(0, 0, 0, 0.4);
     z-index: 50;
+    border-radius: 14px 14px 0px 0px;
 
     p {
       margin: 10px 0px;
@@ -30,48 +34,6 @@
     }
   }
 
-  .controller-wrapper {
-    z-index: 40;
-
-    .controller {
-      display: inline-block;
-      text-align: center;
-      white-space: nowrap;
-      min-width: 28px;
-      border-radius: 980px;
-      background: #0071e3;
-      font-size: 18px;
-      line-height: 1.1764805882;
-      letter-spacing: -0.022em;
-      min-width: 26px;
-      padding: 12px 22px;
-      font-size: 14px;
-      line-height: 1.4285914286;
-      font-weight: 400;
-      letter-spacing: -0.016em;
-      font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial,
-        sans-serif;
-      font-weight: 700;
-      color: #fff;
-      background-color: #1d1d1f;
-      cursor: pointer;
-      position: absolute;
-      top: 45%;
-      left: 50%;
-      transform: translate(-50%, calc(-50% + 15px));
-      margin-bottom: 0;
-      transition: transform 0.4s;
-
-      span {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        max-width: 80%;
-        margin: 0px;
-      }
-    }
-  }
-
   .hover-background {
     opacity: 0.0001;
     background: rgba(0, 0, 0, 0.4);
@@ -81,9 +43,84 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    border-radius: 14px;
 
     &.isFocused {
       opacity: 1;
+    }
+
+    .controller-wrapper {
+      z-index: 40;
+
+      .controller {
+        display: inline-block;
+        text-align: center;
+        white-space: nowrap;
+        min-width: 28px;
+        border-radius: 980px;
+        background: #0071e3;
+        font-size: 18px;
+        line-height: 1.1764805882;
+        letter-spacing: -0.022em;
+        min-width: 26px;
+        padding: 12px 22px;
+        font-size: 14px;
+        line-height: 1.4285914286;
+        font-weight: 400;
+        letter-spacing: -0.016em;
+        font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial,
+          sans-serif;
+        font-weight: 700;
+        color: #fff;
+        background-color: #1d1d1f;
+        cursor: pointer;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, calc(-50% + 15px));
+        margin-bottom: 0;
+        transition: transform 0.4s;
+
+        span {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          max-width: 80%;
+          margin: 0px;
+        }
+      }
+    }
+  }
+
+  .ribbon-wrapper {
+    position: absolute;
+    z-index: 70;
+    top: -5px;
+    right: -5px;
+    width: 44%;
+    height: 52%;
+    display: inline-block;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    .ribbon-value {
+      position: relative;
+
+      span {
+        position: absolute;
+        left: 21%;
+        transform: rotate(46deg);
+        top: 25px;
+        overflow: hidden;
+        width: 84px;
+        font-weight: 800;
+        text-align: center;
+        font-size: 14px;
+        color: white;
+      }
     }
   }
 }
